tests/ucc/bind/good/goto-1.c
int main(void)
{
    goto loop;

loop:
    return 0;
}
