tests/ucc/bind/bad/redef-label.c
int main(void)
{
loop:
    return 0;
loop:
    return 0;
}
